@@ -1,5 +1,5 @@
 <?php
-// $Id: block.module,v 1.162.2.6 2006/08/22 19:32:56 dries Exp $
+// $Id: block.module,v 1.162.2.7 2006/10/18 20:14:08 killes Exp $
 
 /**
  * @file
@@ -110,6 +110,7 @@ function block_block($op = 'list', $delta = 0, $edit = array()) {
 }
 
 function block_admin_save($edit) {
+  unset($edit['token']);
   foreach ($edit as $module => $blocks) {
     foreach ($blocks as $delta => $block) {
       db_query("UPDATE {blocks} SET region = %d, status = %d, weight = %d, throttle = %d WHERE module = '%s' AND delta = '%s'",
