@@ -1,5 +1,5 @@
 <?php
-// $Id: blog.module,v 1.213.2.5 2005/08/14 22:33:25 dries Exp $
+// $Id: blog.module,v 1.213.2.6 2006/10/18 20:14:08 killes Exp $
 
 /**
  * @file
@@ -125,7 +125,7 @@ function blog_page_user($uid) {
   $account = user_load(array((is_numeric($uid) ? 'uid' : 'name') => $uid, 'status' => 1));
 
   if ($account->uid) {
-    drupal_set_title($title = t("%name's blog", array('%name' => $account->name)));
+    drupal_set_title($title = t("%name's blog", array('%name' => check_plain($account->name))));
 
     if (($account->uid == $user->uid) && user_access('edit own blog')) {
       $output = '<li>'. l(t('Post new blog entry.'), "node/add/blog") .'</li>';
