@@ -1,5 +1,5 @@
 <?php
-// $Id: tracker.module,v 1.114.2.1 2005/05/14 17:13:30 dries Exp $
+// $Id: tracker.module,v 1.114.2.2 2006/10/18 20:14:08 killes Exp $
 
 /**
  * @file
@@ -59,7 +59,7 @@ function tracker_menu($may_cache) {
  */
 function tracker_track_user() {
   if ($account = user_load(array('uid' => arg(1)))) {
-    drupal_set_title($account->name);
+    drupal_set_title(check_plain($account->name));
     tracker_page($account->uid);
   }
 }
